Do not run CI against EOL JDK versions